--- a/src/site/xdoc/maven-artifacts.xml.vm
+++ b/src/site/xdoc/maven-artifacts.xml.vm
@@ -180,6 +180,37 @@ dependencies {
   compile group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: '${Log4jReleaseVersion}'
 }
 ]]></pre>
+          <h4>Web Servlet Support</h4>
+          <p>
+            In order to properly support and handle the ClassLoader environment and container lifecycle of a web
+            application, an additional module is required. This module is only required at runtime. In addition, if
+            you're using servlets in an OSGi environment, make sure your preferred version of the servlet API is
+            already available (e.g., if you want to use 3.0, but you've also got 2.5 loaded, make sure both are
+            loaded).
+          </p>
+          <code>pom.xml</code>
+          <pre class="prettyprint linenums"><![CDATA[
+<dependencies>
+  <dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-web</artifactId>
+    <version>${Log4jReleaseVersion}</version>
+    <scope>runtime</scope>
+  </dependency>
+</dependencies>
+          ]]></pre>
+          <code>ivy.xml</code>
+          <pre class="prettyprint linenums"><![CDATA[
+<dependencies>
+  <dependency org="org.apache.logging.log4j" name="log4j-web" rev="${Log4jReleaseVersion}" />
+</dependencies>
+          ]]></pre>
+          <code>build.gradle</code>
+          <pre class="prettyprint linenums"><![CDATA[
+dependencies {
+  compile group: 'org.apache.logging.log4j', name: 'log4j-web', version: '${Log4jReleaseVersion}'
+}
+          ]]></pre>
         <h4>Tag Library</h4>
         <p>The Log4j Log Tag Library creates the capability of inserting log statements in JSPs without
           the use of Java scripting. It uses the standard Log4j 2 API to log messages according to
