Note ability to use YAML files in configuration.html.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1597677 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/site/xdoc/manual/configuration.xml.vm
+++ b/src/site/xdoc/manual/configuration.xml.vm
@@ -44,7 +44,7 @@
           Configuration of Log4j 2 can be accomplished in 1 of 4 ways:
         </p>
           <ol>
-            <li>Through a configuration file written in XML or JSON.</li>
+            <li>Through a configuration file written in XML, JSON, or YAML.</li>
             <li>Programmatically, by creating a ConfigurationFactory and Configuration implementation.</li>
             <li>Programmatically, by calling the APIs exposed in the Configuration interface to add
               components to the default configuration.</li>
