--- a/src/site/xdoc/manual/configuration.xml.vm
+++ b/src/site/xdoc/manual/configuration.xml.vm
@@ -392,7 +392,7 @@ public class Bar {
                 <td>The level of internal Log4j events that should be logged to the console.
                 Valid values for this attribute are "trace", "debug", "info", "warn", "error" and "fatal".
                 Log4j will log details about initialization, rollover and other internal actions to the status logger.
-                Setting <tt>status="trace"</tt> is one of the first things tools available to you if you need to
+                Setting <tt>status="trace"</tt> is one of the first tools available to you if you need to
                 troubleshoot log4j.</td>
               </tr>
               <tr>
