[LOG4J2-682] Special characters (tab and so on) in PatternLayout do not work.
git-svn-id: https://svn.apache.org/repos/asf/logging/log4j/log4j2/trunk@1605430 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/site/xdoc/manual/layouts.xml.vm
+++ b/src/site/xdoc/manual/layouts.xml.vm
@@ -142,7 +142,9 @@
             A conversion pattern is composed of literal text and format control expressions called
             <em>conversion specifiers</em>.
           </p>
-          <p><i>Note that any literal text may be included in the conversion pattern.</i>
+          <p><i>Note that any literal text, including <b>Special Characters</b>, may be included in the conversion
+            pattern.</i> Special Characters include <b>\t</b>, <b>\n</b>, <b>\r</b>, <b>\f</b>. Use <b>\\</b> to
+            insert a single backslash into the output.
           </p>
           <p>Each conversion specifier starts with a percent sign (%) and is followed by optional <em>format
             modifiers</em> and a <em>conversion character</em>. The conversion character specifies the type of
