--- a/src/site/asciidoc/manual/json-template-layout.adoc.vm
+++ b/src/site/asciidoc/manual/json-template-layout.adoc.vm
@@ -14,6 +14,7 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 ////
+#set($dollar = '$')
 = JSON Template Layout
 Volkan Yazıcı <vy@apache.org>
 
@@ -814,7 +815,9 @@ index       = "index" -> number
 ----
 | `logEvent.getMessage().getParameters()`
 | `stringified` flag translates to `String.valueOf(value)`, hence mind
-  not-`String`-typed values.
+  not-`String`-typed values. Further, `logEvent.getMessage()` is expected to
+  implement `ParameterVisitable` interface, which is the case if
+  `log4j2.enableThreadlocals` property set to true.
 a|
 Resolve the message parameters into an array:
 
