--- a/src/changes/announcement.vm
+++ b/src/changes/announcement.vm
@@ -65,15 +65,17 @@ temporary objects) while logging. In addition, Log4j 2 will not lose events whil
 
 The artifacts may be downloaded from https://logging.apache.org/log4j/2.x/download.html.
 
-This release contains a fix for bug LOG4J2-2838.
+This release contains a new Layout, JsonTemplateLayout, that is intended to ultimately replace JsonLayout. As its
+name suggests it uses a template to define the elements to include in the JSON. This Layout was contributed by the
+author of the log4j2-logstash-layout at GitHub, and who is now a member of the Log4j community.
+
+Log4j 2.14.0 adds support for MongoDB 4 and removes support for MongoDB 2.
+
+This release also contains a number of bug fixes which are listed below.
 
 Due to a break in compatibility in the SLF4J binding, Log4j now ships with two versions of the SLF4J to Log4j adapters.
 log4j-slf4j-impl should be used with SLF4J 1.7.x and earlier and log4j-slf4j18-impl should be used with SLF4J 1.8.x and
 later.
-
-Note that the default XML, JSON and YAML formats changed in the 2.11.0 release: they no longer have the "timeMillis"
-attribute and instead have an "Instant" element with "epochSecond" and "nanoOfSecond" attributes. If the previous
-behavior is desired the "includeTimeMillis" attribute may be set to true on each of the respective Layouts.
 
 The Log4j ${relVersion} API, as well as many core components, maintains binary compatibility with previous releases.
 
@@ -117,8 +119,8 @@ $h3 Removed
 #end
 ---
 
-Apache Log4j ${relVersion} requires a minimum of Java 8 to build and run. Log4j 2.3 was the
-last release that supported Java 6 and Log4j 2.12.1 is the last release to support Java 7.
+Apache Log4j ${relVersion} requires a minimum of Java 8 to build and run. Log4j 2.12.1 is the last release to support
+Java 7.
 
 For complete information on ${project.name}, including instructions on how to submit bug
 reports, patches, or suggestions for improvement, see the Apache ${project.name} website:
