--- a/src/site/markdown/index.md.vm
+++ b/src/site/markdown/index.md.vm
@@ -131,9 +131,8 @@ The Log4j 2 User's Guide is available on this [site](manual/index.html) or as a 
 
 $h2 Requirements
 
-Log4j 2.13.0 and greater require Java 8. Version 2.4 through 2.12.1 required Java 7 and versions 2.0-alpha1 to 2.3
-required Java 6. Some features require optional dependencies; the documentation for these features specifies the
-dependencies.
+Log4j 2.13.0 and greater require Java 8. Version 2.4 through 2.12.1 required Java 7. Some features require optional
+dependencies; the documentation for these features will specify the required dependencies.
 
 $h2 News
 
@@ -145,18 +144,10 @@ Log4j $Log4jReleaseVersion is the latest release of Log4j. As of Log4j 2.13.0 Lo
 runtime. This release contains new features and fixes which can be found
 in the latest [changes report](changes-report.html#a$Log4jReleaseVersion).
 
-Note that subsequent to the release of Log4j 2.6 a minor source incompatibility with prior release was found due to the
-addition of new methods to the Logger interface. If you have code that does:
+Log4j 2.14.0 contains a new Layout, [JsonTemplateLayout](manual/json-template-layout.html), that is intended to
+ultimately replace JsonLayout. As its name suggests it uses a template to define the elements to include in the JSON.
+This Layout was contributed by the author of the log4j2-logstash-layout at GitHub, and who is now a member of the Log4j community.
 
-    logger.error(null, "This is the log message", throwable);
-
-or similar with any log level you will get a compiler error saying the reference is ambiguous. To correct this either
-do:
-
-    logger.error("This is the log message", throwable);
-
-or
-
-    logger.error((Marker) null, "This is the log message", throwable);
+Log4j 2.14.0 adds support for MongoDB 4 and removes support for MongoDB 2.
 
 Log4j $Log4jReleaseVersion maintains binary compatibility with previous releases.
